need to add icon for each order of medecine to professional page table layout, add collapse to professional menu header section, fix hamburger menu, pick colors, do responsive tablet & desktop, figure out tags and categories in wordpress to organise post under right page

--- a/mairie-wordpress-maquettes/assets/style/header.css
+++ b/mairie-wordpress-maquettes/assets/style/header.css
@@ -132,8 +132,8 @@ NAVIGATION
 }
 
 .header-container .active {
-    display: flex;
-    flex-direction: column;
+    display: block;
+    /* flex-direction: column; */
 }
 
 .header-container .header-menu-button-container {
