--- a/mairie-wordpress-maquettes/assets/style/single-post.css
+++ b/mairie-wordpress-maquettes/assets/style/single-post.css
@@ -14,6 +14,10 @@
     margin-block: 2rem;
 }
 
+.main-container article embed {
+    margin-block: 2rem;
+}
+
 
 /* 
     ==================
